@@ -8,6 +8,7 @@ A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+...G...PS. [ZBX-11149] added support of OpenSSL 1.1.0 (Andris, gleb)
 A......... [ZBX-11191] fixed web scenarios not updating step items when giving only "applicationid" and steps with "httpstepid" properties (Ivo)
 A......... [ZBX-11191] fixed updating templated web scenario steps by prohibiting to directly change the step name or giving different amount of steps than in template (Ivo)
 A......... [ZBX-11191] improved web scenario step validation by adding required fields (Ivo)
@@ -233,6 +234,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+...G...PS. [ZBX-11149] added support of OpenSSL 1.1.0 (Andris, gleb)
 A......... [ZBX-11191] fixed web scenarios not updating step items when giving only "applicationid" and steps with "httpstepid" properties (Ivo)
 A......... [ZBX-11191] fixed updating templated web scenario steps by prohibiting to directly change the step name or giving different amount of steps than in template (Ivo)
 A......... [ZBX-11191] improved web scenario step validation by adding required fields (Ivo)
